# pystata-x

./: .coverage  .gitignore  .pi-committer.toml  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.amd64  LICENSE  README.md  benchmark_cold_init.py  build_c.py  docker-entrypoint.sh  main.py  manifest-windows.json  pyproject.toml  test_debug_read.py  test_drop_gen.py  test_extended_macro.py  test_full_encoding.py  test_full_macro.py  test_gen_double.py  test_gen_macro.py  test_label_list.py  test_label_syntaxes.py  test_macro.py  test_macro10.py  test_macro2.py  test_macro3.py  test_macro4.py  test_macro5.py  test_macro6.py  test_macro7.py  test_macro8.py  test_macro9.py  test_macro_final.py  test_max_str.py  test_name_len.py  test_replace_debug.py  test_replace_expr.py  test_scalar_debug.py  (+24 more)
.github/workflows/: build-test.yml  publish.yml  release.yml  test-clean.yml  test-clean2.yml  test-full2.yml  test-full3.yml  test-full4.yml  test-matrix.yml  test-minimal.yml  test-name.yml  test-timeout.yml
benchmarks/: __init__.py  bench_baseline.py  bench_cold_init.py  bench_cold_start.py  bench_sfi.py  bench_sfi_methods.py  bench_sfi_methods.py.bak  bench_stata_fast.py  bench_stata_fast_coldinit.py  bench_stata_fast_fork.py  bench_stata_fast_full.py  conftest.py  generate_dataset.py  run_benchmarks.py  test_benchmark_pystata.py  verify_fast_path.py
benchmarks/history/: baseline_20260519_044834_70f55e3.json  bench_c_fast_20260519_200941.json  bench_sfi_cold_20260519_192225_229706e.json  bench_sfi_cold_20260519_192253_229706e.json  bench_sfi_cold_20260519_193206_229706e.json  bench_sfi_methods_20260519_192814_229706e.json  bench_sfi_sfi_20260519_192604_229706e.json  bench_sfi_sfi_20260519_192628_229706e.json  benchmark_20260514_091824.json  benchmark_20260514_092231.json  benchmark_20260514_092529.json  benchmark_20260514_092921.json  benchmark_20260514_094156.json  cold_init_20260519_041145_70f55e3.json  cold_init_20260519_041739_70f55e3.json  cold_init_20260519_041939_70f55e3.json  cold_init_20260519_042443_70f55e3.json  cold_init_20260519_043327_035c99b.json  coldinit_engine_20260519_055951.json  coldinit_engine_20260519_060005.json  coldinit_fork_20260519_050457_70f55e3.json  coldstart_20260520_163128_linux.json  per-platform-macos-arm64-coldinit_engine_20260519_093653.json  per-platform-macos-arm64-stata_fast_20260519_093702_752e7ab.json  stata_fast_20260519_050015_70f55e3.json  stata_fast_20260519_050036_70f55e3.json  stata_fast_full_20260519_050304_70f55e3.json
docs/: APPROACH.md  BENCHMARKING.md  CRACKED_CONVENTIONS.md  REMAINING_GAPS.md  STEP2A_COMPLETION.md  X86_64_DISCOVERIES.md  bi_st_analysis.md  bi_st_re_report.md
docs/archive/: README.md  SFI_CROSS_PLATFORM_DESIGN.md
history/: coldinit_engine_20260519_055944.json
scripts/: analyze_binary.py  analyze_fn_protocol.py  analyze_macro_write.py  bist_attach_capture.py  bist_capture.py  bist_probe.py  buffer_size_test.py  check_pystata.py  check_strl_type.py  check_vartype_direct.py  copy_lib_to_package.py  count_methods.py  debug_addvar.py  debug_addvar2.py  debug_encoding.py  debug_exports.py  debug_frame.py  debug_frame2.py  debug_matrix.py  debug_matrix_dim.py  debug_pe_layout.py  debug_tempname.py  debug_tempname2.py  debug_vl.py  debug_vl2.py  diff_manifests.py  dispatch_analysis.py  examine_tsmat2.py  find_data_buffer.py  find_gws.py  find_gws2.py  find_putglobal.py  find_strl_code.py  find_strl_code2.py  gen_oracle.py  gen_oracle_debug4.py  gen_oracle_docker.py  gen_win_manifest.py  gen_win_oracle.py  install_stata.sh  (+68 more)
scripts/archive/: _minimal_stata_init.py  bist_trace.py  capture.lldb  capture1.lldb  check_strlpart_modify.py  examine_tsmat.py  lldb_report.py  strlpart_buffer_test.py  test_bi_addvar.py  test_bi_st_harness.c  test_c_harness.py  test_matrix2.py  test_matrix3.py  test_matrix4.py  test_matrix_colstripes.py  test_matrix_void.py  test_matrix_zeroargs.py  test_strlpart3.py  test_strlpart4.py
scripts/archive/tmp_scripts/: batch_data.py  check_addrs.py  check_data_syms.py  check_error.py  check_globals.py  check_globals2.py  check_globals3.py  check_globals_nobs.py  check_sdata.py  check_sdata2.py  check_tsmat_fields.py  check_tsmat_meta.py  disasm_bist_data_long.py  disasm_bist_part.py  disasm_data.py  disasm_data_after_pool.py  disasm_data_full.py  disasm_data_part2.py  disasm_full_bist_data.py  disasm_helper.py  disasm_nobs.py  disasm_nobs_nvar.py  display_approach.py  display_data.py  dump_tsmat.py  explore_globals.py  find_data.py  find_data3.py  find_data_array.py  find_data_array2.py  find_data_array3.py  find_data_global.py  find_data_helpers.py  find_data_section.py  find_data_symbols.py  find_dispatch.py  find_dispatch_data.py  find_formats.py  find_formats2.py  scan_for_data.py  (+56 more)
scripts/maintenance/: sync_version.py
src/pystata-analyzer/: README.md  pyproject.toml
src/pystata-analyzer/src/pystata_analyzer/: __init__.py  __main__.py  binary.py  elf.py  framework.py  helpers.py  live_protocol.py  pe_binary.py  plugin.py  registry.py
src/pystata-analyzer/tests/: test_analyzer.py  test_framework.py  test_integration.py
src/pystata_x/: __init__.py  _config.py  _core.py  _stata_fast.py  stata_setup.py
src/pystata_x/sfi/: __init__.py  _analyzer.py  _core.py  (+8 more)
src/stata-fast/: ANALYSIS.md  CMakeLists.txt  Makefile  README.md  bypass_init.c  bypass_init.dylib  compile_check.c  libstata_fast.dylib  stata_fast.c  stata_fast.h  test_stata_fast  test_stata_fast.c
src/stata-fast/build2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_check  libstata_fast.dylib  test_stata_fast
src/stata-fast/build2/Testing/Temporary/: CTestCostData.txt
src/stata_fast/: __init__.py  _config.py  _core.py  stata_setup.py
tests/: conftest.py  test_import.py
tests/e2e/: conftest.py  edge_cases.py  oracle-linux-x86_64.json  oracle.json  oracle_windows.json  realworld_crud.py  test_full_cycle.py  test_sfi.py
tests/integration/: test_run_integration.py
tests/unit/: test_config.py  test_execute.py  test_run.py  test_semantic_release.py  test_sfi_core.py  test_sfi_engine.py
(+20 files in other folders)
