[project]
name = "pystata-x"
dynamic = ["version"]
description = "Fast Stata-Python bridge — independent drop-in replacement for pystata."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
    {name = "Thomas Monk", email = "t.d.monk@lse.ac.uk"},
]
keywords = ["stata", "python", "bridge", "pystata", "statistics", "econometrics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # No hard deps — sfi is only available inside Stata's Python process
]

[project.urls]
Homepage = "https://github.com/tmonk/pystata-x"
Repository = "https://github.com/tmonk/pystata-x"
Issues = "https://github.com/tmonk/pystata-x/issues"

[project.optional-dependencies]
numpy = ["numpy"]
pandas = ["pandas"]
dev = [
    "build>=1.3.0",
    "hatch>=1.16.2",
    "twine>=6.2.0",
    "ruff>=0.4.0",
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.6.1",
    "python-semantic-release>=9.8.0",
    "numpy",
    "pandas",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pystata_x"]

[tool.hatch.build.targets.sdist]
exclude = ["/tests", "/uv.lock", "/nul", "/NUL"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -m 'not slow and not requires_stata'"
markers = [
    "requires_stata: marks tests that need Stata installed (deselect with '-m \"not requires_stata\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "fast: marks tests that complete quickly (default run target)",
]

[tool.coverage.run]
source = ["pystata_x"]
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.4.0",
    "build>=1.3.0",
    "hatch>=1.16.2",
    "twine>=6.2.0",
    "python-semantic-release>=9.8.0",
    "numpy",
    "pandas",
]

[tool.semantic_release]
allow_zero_version = true
branch = "main"
commit_message = "chore(release): {version} [skip ci]"
tag_format = "v{version}"

