[project]
name = "pystata-x"
dynamic = ["version"]
description = "Fast Stata-Python bridge — independent drop-in replacement for pystata."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
    {name = "Thomas Monk", email = "t.d.monk@lse.ac.uk"},
]
keywords = ["stata", "python", "bridge", "pystata", "statistics", "econometrics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # No hard deps — sfi is only available inside Stata's Python process
]

[project.urls]
Homepage = "https://github.com/tmonk/pystata-x"
Repository = "https://github.com/tmonk/pystata-x"
Issues = "https://github.com/tmonk/pystata-x/issues"

[project.optional-dependencies]
numpy = ["numpy"]
pandas = ["pandas"]
dev = [
    "build>=1.3.0",
    "hatch>=1.16.2",
    "twine>=6.2.0",
    "ruff>=0.4.0",
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.6.1",
    "python-semantic-release>=9.8.0",
    "numpy",
    "pandas",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pystata_x"]

[tool.hatch.build.targets.sdist]
exclude = ["/tests", "/uv.lock", "/nul", "/NUL", "*.dylib", "*.so", "*.dll"]

# ── cibuildwheel: pre-built cross-platform wheels ──────────────────────
[tool.cibuildwheel]
# Top-level before-all (fallback for any un-matched platform)
before-all = [
  "cmake -S src/stata-fast -B src/stata-fast/build -DSTATA_PATH=/usr/local/stata -DSTATA_EDITION=se"
]
# Common before-build steps (copy compiled library into wheel)
before-build = [
  "cmake --build src/stata-fast/build",
  "python3 scripts/copy_lib_to_package.py"
]

# Platform-specific CMake configure (stub STATA_PATH — actual Stata not needed
# for compilation; tests won't run but the library compiles and links).
# The select pattern matches cibuildwheel build identifiers like
# cp312-manylinux_x86_64, cp312-macosx_arm64, cp312-win_amd64.
[[tool.cibuildwheel.overrides]]
select = ".*manylinux.*|.*musllinux.*"
archs = ["x86_64"]
before-all = [
  "cmake -S src/stata-fast -B src/stata-fast/build -DSTATA_PATH=/usr/local/stata -DSTATA_EDITION=se"
]

[[tool.cibuildwheel.overrides]]
select = ".*macosx.*"
archs = ["arm64", "x86_64"]
before-all = [
  "cmake -S src/stata-fast -B src/stata-fast/build -DSTATA_PATH=/Applications/StataNow -DSTATA_EDITION=se"
]

[[tool.cibuildwheel.overrides]]
select = ".*win_.*"
archs = ["AMD64", "ARM64"]
before-all = [
  "cmake -S src/stata-fast -B src/stata-fast/build -DSTATA_PATH=C:\\Program Files\\Stata -DSTATA_EDITION=se"
]
# (installed via Visual Studio Build Tools with "Desktop development for C++"
#  workload + "C++ ARM64 build tools" component)

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -m 'not slow and not requires_stata and not optional'"
markers = [
    "requires_stata: marks tests that need Stata installed (deselect with '-m \"not requires_stata\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "fast: marks tests that complete quickly (default run target)",
    "optional: optional tests that require additional dependencies (excluded from default run, use -m optional to run)",
]

[tool.coverage.run]
source = ["pystata_x"]
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.4.0",
    "build>=1.3.0",
    "hatch>=1.16.2",
    "twine>=6.2.0",
    "python-semantic-release>=9.8.0",
    "numpy",
    "pandas",
]

[tool.semantic_release]
allow_zero_version = true
branch = "main"
commit_message = "chore(release): {version} [skip ci]"
tag_format = "v{version}"

